# open3d-pc

./: README.md  conda.yaml  main.py  pyproject.toml
conf/: config.yaml  logging.yaml
src/open3d_pc/: logging_config.py  point_cloud_clusterer.py  point_cloud_loader.py  point_cloud_pipeline.py  point_cloud_preprocessor.py
tests/: conftest.py  test_point_cloud_clusterer.py  test_point_cloud_loader.py  test_point_cloud_preprocessor.py
