[project]
name = "open3d-pc"
version = "0.1.0"
requires-python = ">= 3.11"
authors = [{name = "sc-see"}]
dependencies = []

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
open3d_pc = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
open3d = ">=0.19.0,<0.20"
pytest = ">=8.4.1,<9"
hydra-core = ">=1.3.2,<2"
ruff = ">=0.12.4,<0.13"
isort = ">=6.0.1,<7"

[tool.ruff]
select = ["E", "F", "I", "W", "C", "B", "S"]
line-length = 88
extend-select = ["I"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
